Twenty Twenty-One: Prevent `<iframe>` embeds from being too narrow.
This fixes an issue where `<iframe>` embeds were being pushed to the side of the screen and compressed to the point of being unusable.

Props helen, mukesh27, poena, thorlentz.
Fixes #52004.
Built from https://develop.svn.wordpress.org/trunk@49823


git-svn-id: http://core.svn.wordpress.org/trunk@49542 1a063a9b-81f0-0310-95a4-ce76da25c4cd

--- a/wp-content/themes/twentytwentyone/assets/css/ie.css
+++ b/wp-content/themes/twentytwentyone/assets/css/ie.css
@@ -5866,12 +5866,6 @@ h1.entry-title {
 	margin: 30px 0 !important;
 	max-width: 100% !important;
 }
-@media only screen and (min-width: 482px) {
-
-	.entry-content > iframe[style] {
-		max-width: 30px !important;
-	}
-}
 
 .entry-footer {
 	color: #28303d;
